fix: gap between layout

--- a/src/pages/FilmDetail/FilmDetail.css
+++ b/src/pages/FilmDetail/FilmDetail.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  padding: 50px 0;
 }
 
 .film_detail__hero {
